--- a/builder.yaml
+++ b/builder.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   containers:
   - name: kubectl
-    image: dwdraju/gke-kubectl-docker:latest
+    image: dreweaster/gke-tools:latest
     command:
     - /bin/cat
     tty: true    
